# gilligan-prototype

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  connectdialog.cxx  connectdialog.h  conversationwidget.cxx  conversationwidget.h  dcpcommandprocessor.cxx  dcpcommandprocessor.h  dcpconnection.cxx  dcpconnection.h  dcpmessage.cxx  dcpmessage.h  gilligan  gilligan.pro  main.cxx  mainwindow.cxx  mainwindow.h  moc_connectdialog.cpp  moc_dcpconnection.cpp  moc_mainwindow.cpp  registrationwizard.cxx  registrationwizard.h  registrationwizard_private.cxx  registrationwizard_private.h  utility.cxx  utility.h
